--- a/wedding/index.html
+++ b/wedding/index.html
@@ -478,14 +478,12 @@
                 <div class="timeline-title">Table 1</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Shivam Patel</li>
-                    <li>Gautam Naik</li>
-                    <li>Yirun Wang</li>
-                    <li>Josh Thompson</li>
-                    <li>Francis Anim</li>
-                    <li>Esther Gyampo (Open)</li>
-                    <li>Yuchen Wu</li>
-                    <li>Gary (Zihao Zhu)</li>
+                    <li>Corner Scisciani</li>
+                    <li>Bekah Scisciani</li>
+                    <li>Lainey Scisciani</li>
+                    <li>Lewie Scisciani</li>
+                    <li>Emma Zanker</li>
+                    <li>Emma Zanker</li>
                   </ul>
                 </div>
               </div>
@@ -517,6 +515,7 @@
                     <li>Nana Hammond</li>
                     <li>Brendan Affare</li>
                     <li>Anthony Twum-Barimah</li>
+                    <li>Kalvin Acheampong</li>
                   </ul>
                 </div>
               </div>
@@ -525,14 +524,14 @@
                 <div class="timeline-title">Table 4</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Jemima Watkins</li>
-                    <li>Florence Ofori</li>
                     <li>Margeret Lawerteh</li>
-                    <li>Stephanie Watkins</li>
-                    <li>Sophia Watkins</li>
-                    <li>Kalvin Acheampong</li>
+                    <li>Florence Ofori</li>
+                    <li>Jemima Watkins</li>
                     <li>Yahaya Lukman</li>
+                    <li>Dorcas Antwi</li>
                     <li>Doris Acheampong</li>
+                    <li>Esther Darkwah</li>
+                    <li>Eric Darkwah</li>
                   </ul>
                 </div>
               </div>
@@ -576,6 +575,9 @@
                     <li>Kaaliyah King</li>
                     <li>Victor Ewere</li>
                     <li>Verissa Owusu</li>
+                    <li>Francis Anim</li>
+                    <li>Stephanie Watkins</li>
+                    <li>Sophia Watkins</li>
                   </ul>
                 </div>
               </div>
@@ -584,13 +586,14 @@
                 <div class="timeline-title">Table 8</div>
                 <div class="timeline-description">
                   <ul>
+                    <li>Shivam Patel</li>
+                    <li>Gautam Naik</li>
+                    <li>Yirun Wang</li>
+                    <li>Josh Thompson</li>
+                    <li>Yuchen Wu</li>
+                    <li>Gary (Zihao Zhu)</li>
                     <li>Lisa Kreig</li>
                     <li>Duncan MacDiarmid</li>
-                    <li>Dorcas Antwi</li>
-                    <li>Esther Darkwah</li>
-                    <li>Eric Darkwah</li>
-                    <li>Open</li>
-                    <li>Open</li>
                   </ul>
                 </div>
               </div>
