--- a/wedding/index.html
+++ b/wedding/index.html
@@ -129,6 +129,29 @@
         right: auto !important;
       }
     }
+
+    #tables {
+      width: 100%;
+      margin: auto;
+      padding: 20px 0;
+    }
+
+    #tables .timeline-entry {
+      width: 100%;
+      text-align: left;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+
+    #tables .timeline-entry.left,
+    #tables .timeline-entry.right {
+      left: 0 !important;
+    }
+
+    #tables .timeline-entry::before {
+      left: -10px !important;
+      right: auto !important;
+    }
   </style>
 
 
