--- a/wedding/detailed.html
+++ b/wedding/detailed.html
@@ -486,7 +486,7 @@
                                         <li>Lainey Scisciani</li>
                                         <li>Lewie Scisciani</li>
                                         <li>Emma Zanker</li>
-                                        <li>Emma Zanker</li>
+                                        <li>Danny Bird</li>
                                     </ul>
                                 </div>
                             </div>
