--- a/wedding/index.html
+++ b/wedding/index.html
@@ -493,7 +493,7 @@
                 <div class="timeline-description">
                   <ul>
                     <li>John Zanker</li>
-                    <li>Kristin Zanker</li>
+                    <li>Kristen Zanker</li>
                     <li>Lauren Berger</li>
                     <li>Nate Berger</li>
                     <li>Natalie Berger</li>
