--- a/wedding/detailed.html
+++ b/wedding/detailed.html
@@ -496,7 +496,7 @@
                                 <div class="timeline-description">
                                     <ul>
                                         <li>John Zanker</li>
-                                        <li>Kristin Zanker</li>
+                                        <li>Kristen Zanker</li>
                                         <li>Lauren Berger</li>
                                         <li>Nate Berger</li>
                                         <li>Natalie Berger</li>
