--- a/wedding/detailed.html
+++ b/wedding/detailed.html
@@ -180,8 +180,9 @@
             <div class="table-cell">
                 <div class="container">
                     <h1 class="intro-title mb-4">Michael & Emily </h1>
-                    <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Carmel Indiana,
-                            Celebration</span><strong class="text-slider"></strong></p>
+                    <p class="intro-subtitle"><span class="text-slider-items">04.27.2025,Celebration, Ritz Charles,
+                            Carmel - Indiana
+                        </span><strong class="text-slider"></strong></p>
                 </div>
             </div>
         </div>
