--- a/wedding/index.html
+++ b/wedding/index.html
@@ -148,26 +148,18 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#timeline">Timeline</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#prewedding">Pre-wedding</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#ceremony">Ceremony</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#reception">Reception</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll" href="#seating">Seating</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" target="_blank"
+              href="https://www.zola.com/wedding/affareeverafter">Website</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#traditional">Ghana Traditional</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" target="_blank"
-              href="https://www.zola.com/wedding/affareeverafter">Website</a>
+              href="https://www.zola.com/wedding/affareeverafter/registry">Registry</a>
           </li>
         </ul>
       </div>
@@ -189,268 +181,6 @@
   </div>
 
   <main id="main">
-
-    <section id="timeline" class="about-mf sect-pt4 route">
-      <div class="container">
-
-        <div class="title-box text-center">
-          <h3 class="title-a">
-            Timeline
-          </h3>
-          <div class="line-mf"></div>
-
-          <div class="row">
-
-
-
-
-            <div id="prewedding" class="timeline">
-              <div class="timeline-entry left">
-                <div class="timeline-time">1:30 PM</div>
-                <div class="timeline-title">Vendor Arrival</div>
-                <div class="timeline-description">
-                  All vendors arrive and setup.
-                  <ul>
-                    <li>Florist</li>
-                    <li>Photographer, DJ</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Aubrey&Brandon Thornsbury, DJ Gustave, Donna Lennox</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">2:00 PM</div>
-                <div class="timeline-title">First Look Photos</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>First look photos in Traditional clothing</li>
-                    <li>First look photos in White Dress</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Couple, Aubrey&Brandon Thornsbury</div>
-              </div>
-
-              <div id="ceremony" class="timeline-entry left">
-                <div class="timeline-time">3:30 PM</div>
-                <div class="timeline-title">Guest Arrivals & Prep Photos</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Guests arrive in the venue</li>
-                    <li>Guests seated in Chapel</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">All, Jaelynn Thomas (host)</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">4:00 PM</div>
-                <div class="timeline-title">Ceremony Starts</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Officiant & Michael enter </li>
-                    <li>Processional</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Rev. Dr. Jeremy Caskey, Judith Anane (singing)</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">4:10 PM</div>
-                <div class="timeline-title">Ceremony</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Statement of Purpose</li>
-                    <li>Declaration of Consent</li>
-                    <li>Sermon</li>
-                    <li>Exchange of Vows</li>
-                    <li>Nuptial Kiss & Jumping Broom</li>
-                    <li>Benediction</li>
-                    <li>Recessional</li>
-                    <li>Announcements</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Rev. Dr. Jeremy Caskey</div>
-              </div>
-
-
-              <div id="reception" class="timeline-entry left">
-                <div class="timeline-time">5:00 PM</div>
-                <div class="timeline-title">Cocktail Hour & Family Photos</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Cocktail</li>
-                    <li>Family Photos</li>
-                    <li>Emily's Family Table #15, #14</li>
-                    <li>Michael's Family Table #2,#3,#4</li>
-                    <li>Church Family #6, #10</li>
-                    <li>Pittsburgh friends #7, #8</li>
-                    <li>Random Individual photos</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">DJ Gustave, Aubrey&Brandon Thornsbury</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">5:45 PM</div>
-                <div class="timeline-title">Guests Seated for Reception</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>All guests seated</li>
-                    <li>MC (Michael Byers) seats guests</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Michael Byers (MC)</div>
-              </div>
-
-              <div class="timeline-entry left">
-                <div class="timeline-time">6:00 PM</div>
-                <div class="timeline-title">Bridal Party & Family Announced In</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Enter with dancing - Michael's Family Table #2,#3,#4</li>
-                    <li>Enter with dancing - Emily's family Table #15, #14</li>
-                    <li>Couple announced in with dancing</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Michael Byers, DJ Gustave</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">6:10 PM</div>
-                <div class="timeline-title">Cake Cutting</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Cut cake</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Michael & Emily Affare</div>
-              </div>
-
-              <div class="timeline-entry left">
-                <div class="timeline-time">6:15 PM</div>
-                <div class="timeline-title">First Dance</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>First dance</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Couple, DJ Gustave</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">6:20 PM</div>
-                <div class="timeline-title">Welcome & Blessing</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Welcome address</li>
-                    <li>Marlena grabs food for couple #Table 0 during address</li>
-
-                  </ul>
-                </div>
-                <div class="responsible-person">Kimberley Thomas, Marlena Thomas</div>
-              </div>
-
-              <div class="timeline-entry left">
-                <div class="timeline-time">6:30 PM</div>
-                <div class="timeline-title">Serve Time - Dinner Buffet</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Table #15, #14, #9</li>
-                    <li>Table #3,#4, #8 </li>
-                    <li>Table #16,#13, #10 </li>
-                    <li>Table #19 (vendors) </li>
-                    <li>Table #2,#5, #7 </li>
-                    <li>Table #17,#12, #11 </li>
-                    <li>Table #1,#18, #6 </li>
-                    <li>MC announces tables</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Michael Byers (MC)</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">7:00 PM</div>
-                <div class="timeline-title">Bride & Groom Change Outfits</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Couple Change</li>
-                    <li>Eating and music</li>
-                    <li>Announce gift table & favors</li>
-                    <li>Announce to write in Wedding Guest book, add email to receive your photos</li>
-                    <li>Announce traditional wedding</li>
-                    <li>Announce share your photos to Michael - 4129833254</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Couple, DJ Gustave</div>
-              </div>
-
-              <div class="timeline-entry left">
-                <div class="timeline-time">7:15 PM</div>
-                <div class="timeline-title">Toast & Traditional | Cake Serve Time</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Emily & Michael enter and display traditional dresses</li>
-                    <li>Toast by Samuel Affare</li>
-                    <li>Michael's explains traditional process - Toast to family</li>
-                    <li>Stephanie and Sophia present baskets to mummy</li>
-                    <li>Michael gives check to Marlena & Mark Allen</li>
-                    <li>Mark Allen & Mummy ask if they should accept it</li>
-                    <li>Emily confirms they should accept it</li>
-                    <li>Toast by Kimberley Thomas</li>
-                    <li>Toast by Marlena Byers</li>
-                    <li>Toast by Mark Allen Thomas</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Couple, Samuel Affare, Kimberley Thomas, Marlena Byers, Mark Allen
-                  Thomas </div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">7:40 PM</div>
-                <div class="timeline-title">Guests Join in Dancing | Candid photos</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Open floor - everyone dance</li>
-                    <li>DJ Gustave - Playlist Ghana</li>
-                    <li>DJ Gustave - Playlist Requested songs</li>
-                    <li>DJ Gustave - Playlist Black Music</li>
-                    <li>More candid pictures with Couple</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">DJ Gustave, Photographer</div>
-              </div>
-
-              <div class="timeline-entry left">
-                <div class="timeline-time">10:00 PM</div>
-                <div class="timeline-title">Bar Closes & Event Ends</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Bar closes</li>
-                    <li>People leave</li>
-                    <li>Tear down</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Vendors</div>
-              </div>
-
-              <div class="timeline-entry right">
-                <div class="timeline-time">11:00 PM</div>
-                <div class="timeline-title">Teardown Complete</div>
-                <div class="timeline-description">
-                  <ul>
-                    <li>Closed</li>
-                    <li>Vendors unplug</li>
-                  </ul>
-                </div>
-                <div class="responsible-person">Processional Team</div>
-              </div>
-
-            </div>
-
-
-          </div>
-        </div>
-    </section>
 
     <section id="seating" class="about-mf sect-pt4 route">
       <div class="container">
