--- a/wedding/index.html
+++ b/wedding/index.html
@@ -494,6 +494,93 @@
     </section>
 
 
+    <section id="projects" class="portfolio-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Pages
+              </h3>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+
+          <!-- Projects -->
+          <div class="col-md-4">
+            <div class="work-box">
+              <div class="work-img">
+                <div class="work-img">
+                  <img src="../assets/img/projects/dhsalleghenycounty.jpg" alt="" class="img-fluid">
+                </div>
+                </a>
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h2 class="w-title">Wedding Website</h2>
+                    <div class="w-more">
+                      <span class="w-date">Visit Wedding Website</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <div class="work-img">
+                <div class="work-img">
+                  <img src="../assets/img/projects/elc.jpg" alt="" class="img-fluid">
+                </div>
+                </a>
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h2 class="w-title">Ghana Traditional</h2>
+                    <div class="w-more">
+                      <span class="w-date">Learn about Ghana</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <div class="work-img">
+                <div class="work-img">
+                  <img src="../assets/img/projects/ncaghana.jpg" alt="" class="img-fluid">
+                </div>
+                </a>
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h2 class="w-title">Registry</h2>
+                    <div class="w-more">
+                      <span class="w-date">Thanks for Giving</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+
+    </section>
+
+
+
     <section class=" paralax-mf footer-paralax bg-image sect-mt4 route"
       style="background-image: url(../assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
