links put around workboxes

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -511,33 +511,39 @@
 
           <!-- Projects -->
           <div class="col-md-4">
-            <div class="work-box">
-              <div class="work-img">
+
+            <a href="https://www.zola.com/wedding/affareeverafter" target="_blank">
+
+              <div class="work-box">
                 <div class="work-img">
-                  <img src="../assets/img/projects/dhsalleghenycounty.jpg" alt="" class="img-fluid">
+                  <div class="work-img">
+
+                    <img src="../assets/img/projects/dhsalleghenycounty.jpg" alt="" class="img-fluid">
+                  </div>
+
                 </div>
-                </a>
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-12">
-                    <h2 class="w-title">Wedding Website</h2>
-                    <div class="w-more">
-                      <span class="w-date">Visit Wedding Website</span>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h2 class="w-title">Wedding Website</h2>
+                      <div class="w-more">
+                        <span class="w-date">Visit Wedding Website</span>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </div>
+            </a>
           </div>
+        </div>
 
-          <div class="col-md-4">
+        <div class="col-md-4">
+          <a target="_blank" href="https://www.zola.com/wedding/affareeverafter/registry">
             <div class="work-box">
               <div class="work-img">
                 <div class="work-img">
                   <img src="../assets/img/projects/elc.jpg" alt="" class="img-fluid">
                 </div>
-                </a>
+
               </div>
               <div class="work-content">
                 <div class="row">
@@ -550,15 +556,19 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
+        </div>
 
-          <div class="col-md-4">
+        <div class="col-md-4">
+          <a target="_blank" href="https://www.zola.com/wedding/affareeverafter/registry">
             <div class="work-box">
               <div class="work-img">
                 <div class="work-img">
+
                   <img src="../assets/img/projects/ncaghana.jpg" alt="" class="img-fluid">
+
                 </div>
-                </a>
+
               </div>
               <div class="work-content">
                 <div class="row">
@@ -571,10 +581,11 @@
                 </div>
               </div>
             </div>
-          </div>
-
-
+          </a>
         </div>
+
+
+      </div>
       </div>
 
     </section>
