updates done to linked pages

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -518,7 +518,7 @@
                 <div class="work-img">
                   <div class="work-img">
 
-                    <img src="../assets/img/projects/dhsalleghenycounty.jpg" alt="" class="img-fluid">
+                    <img src="../assets/img/projects/weddingwebsite.png" alt="" class="img-fluid">
                   </div>
 
                 </div>
@@ -541,7 +541,7 @@
             <div class="work-box">
               <div class="work-img">
                 <div class="work-img">
-                  <img src="../assets/img/projects/elc.jpg" alt="" class="img-fluid">
+                  <img src="../assets/img/projects/ghanatraditionalwedding.png" alt="" class="img-fluid">
                 </div>
 
               </div>
@@ -565,7 +565,7 @@
               <div class="work-img">
                 <div class="work-img">
 
-                  <img src="../assets/img/projects/ncaghana.jpg" alt="" class="img-fluid">
+                  <img src="../assets/img/projects/venmothankyou.png" alt="" class="img-fluid">
 
                 </div>
 
@@ -573,7 +573,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">Registry</h2>
+                    <h2 class="w-title">Registry (Venmo)</h2>
                     <div class="w-more">
                       <span class="w-date">Thanks for Giving</span>
                     </div>
@@ -584,6 +584,31 @@
           </a>
         </div>
 
+
+        <div class="col-md-4">
+          <a target="_blank" href="https://www.instagram.com/papaandabena/">
+            <div class="work-box">
+              <div class="work-img">
+                <div class="work-img">
+
+                  <img src="../assets/img/projects/engagementphoto.png" alt="" class="img-fluid">
+
+                </div>
+
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h2 class="w-title">Instagram: PapaAndAbena</h2>
+                    <div class="w-more">
+                      <span class="w-date">Some of our fond Memories</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
 
       </div>
       </div>
@@ -606,31 +631,22 @@
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
-                      Contact
+                      Contact Us with Photos you took (we will share back the professional photos of you). Thank you!
                     </h5>
                   </div>
                   <div class="more-info">
                     <ul class="list-ico">
-                      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=aaffare@gmail.com" target="_blank">
-                        <li><span class="ion-email"></span>aaffare@gmail.com</li>
+                      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=michaelandemilyaffare@gmail.com"
+                        target="_blank">
+                        <li><span class="ion-email"></span>michaelandemilyaffare@gmail.com</li>
                       </a>
                     </ul>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.linkedin.com/in/michaelaffare/" target="_blank"><span
-                            class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://twitter.com/michaelaffare" target="_blank"><span class="ico-circle"><i
-                              class="ion-social-twitter"></i></span></a>
+                      <li><a href="https://www.instagram.com/papaandabena/" target="_blank"><span class="ico-circle"><i
+                              class="ion-social-instagram"></i></span></a>
                       </li>
-                      <li><a href="https://github.com/michaelaffare" target="_blank"><span class="ico-circle"><i
-                              class="ion-social-github"></i></span></a>
-                      </li>
-                      <li><a href="https://www.youtube.com/@michaelaffare" target="_blank"><span class="ico-circle"><i
-                              class="fa fa-youtube-play"></i></span></a>
-                      </li>
-                      <li><a href="https://michaelaffare.medium.com/" target="_blank"><span class="ico-circle"><img
-                              class="img-fluid w-60" src="../assets/img/Footer/medium.png"></img></span></a></li>
 
                     </ul>
                   </div>
