learn about Ghana

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -548,7 +548,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">Ghana Traditional</h2>
+                    <h2 class="w-title">Ghana Traditional Wedding</h2>
                     <div class="w-more">
                       <span class="w-date">Learn about Ghana</span>
                     </div>
