learn about Ghana link fixed in navbar

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -155,7 +155,7 @@
               href="https://www.zola.com/wedding/affareeverafter">Website</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#traditional">Ghana Traditional</a>
+            <a class="nav-link js-scroll" href="#ghanatraditionalwedding">Ghana Traditional</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" target="_blank"
@@ -536,7 +536,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" id="ghanatraditionalwedding">
           <a target="_blank" href="https://www.zola.com/wedding/affareeverafter/registry">
             <div class="work-box">
               <div class="work-img">
