--- a/wedding/index.html
+++ b/wedding/index.html
@@ -560,7 +560,7 @@
         </div>
 
         <div class="col-md-4">
-          <a target="_blank" href="https://www.zola.com/wedding/affareeverafter/registry">
+          <a target="_blank" href="https://account.venmo.com/u/Emily-Thomas-35">
             <div class="work-box">
               <div class="work-img">
                 <div class="work-img">
