Registry info updated

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -573,9 +573,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">Registry (Venmo)</h2>
+                    <h2 class="w-title">Registry: Send to <b>@Emily-Thomas-35</b></h2>
                     <div class="w-more">
-                      <span class="w-date">Thanks for Giving</span>
+                      <span class="w-date">Last four digits of phone number <b>9811</b></span>
                     </div>
                   </div>
                 </div>
