redirect link for traditional updated

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -537,7 +537,7 @@
         </div>
 
         <div class="col-md-4" id="ghanatraditionalwedding">
-          <a target="_blank" href="https://www.zola.com/wedding/affareeverafter/registry">
+          <a target="_blank" href="#">
             <div class="work-box">
               <div class="work-img">
                 <div class="work-img">
