redirect link for traditional updated

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -239,7 +239,7 @@
                 <div class="timeline-description">
                   <ul>
                     <li>Samuel Affare</li>
-                    <li>Nancy Affare | Sophia Affare (Baby)</li>
+                    <li>Nancy Affare | Sophia Affare</li>
                     <li>Jaydon Affare</li>
                     <li>Daniel Hammond</li>
                     <li>Nana Hammond</li>
