registry redirect made better

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -560,7 +560,7 @@
         </div>
 
         <div class="col-md-4">
-          <a target="_blank" href="https://account.venmo.com/u/Emily-Thomas-35">
+          <a target="_blank" href="https://account.venmo.com/pay?recipients=emilyaffare">
             <div class="work-box">
               <div class="work-img">
                 <div class="work-img">
@@ -573,7 +573,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">Registry: Send to <b>@Emily-Thomas-35</b></h2>
+                    <h2 class="w-title">Registry: Send to <b>@emilyaffare</b></h2>
                     <div class="w-more">
                       <span class="w-date">Last four digits of phone number <b>9811</b></span>
                     </div>
