--- a/wedding/index.html
+++ b/wedding/index.html
@@ -158,8 +158,7 @@
             <a class="nav-link js-scroll" href="#ghanatraditionalwedding">Ghana Traditional</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" target="_blank"
-              href="https://www.zola.com/wedding/affareeverafter/registry">Registry</a>
+            <a class="nav-link js-scroll" target="_blank" href="#registry">Registry</a>
           </li>
         </ul>
       </div>
@@ -559,7 +558,7 @@
           </a>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" id="registry">
           <a target="_blank" href="https://account.venmo.com/pay?recipients=emilyaffare">
             <div class="work-box">
               <div class="work-img">
