update ghana tradition

--- a/wedding/ghana.html
+++ b/wedding/ghana.html
@@ -117,8 +117,7 @@
                         </p>
                         <h5>Joining of Two Families:</h5>
                         <p>
-                            Unlike some Western cultures where marriage is primarily seen as an individual choice, in
-                            the Ghanaian tradition, it's viewed as creating a new bond and alliance between two
+                            In the Ghanaian tradition, it's viewed as creating a new bond and alliance between two
                             lineages. The families become interconnected, sharing responsibilities and offering mutual
                             support. Decisions about the marriage often involve the elders and other key family members
                             from both sides.
