zoom in to see your table position

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -260,6 +260,7 @@
 
           <div class="about-img">
             <img src="../assets/img/seating.jpg" class="img-fluid rounded b-shadow-a" alt="">
+            <span class="about-img-info">Zoom in to see your table position</span>
           </div>
 
           <div class="line-mf"></div>
@@ -306,12 +307,12 @@
                   <div class="timeline-content">
                     <h4 class="timeline-title">Table 3</h4>
                     <ul>
+                      <li>Brendan Affare</li>
                       <li>Samuel Affare</li>
-                      <li>Nancy Affare | Sophia Affare</li>
+                      <li>Nancy Affare & baby</li>
                       <li>Jaydon Affare</li>
                       <li>Daniel Hammond</li>
                       <li>Nana Hammond</li>
-                      <li>Brendan Affare</li>
                       <li>Anthony Twum-Barimah</li>
                       <li>Kalvin Acheampong</li>
                     </ul>
@@ -325,10 +326,10 @@
                       <li>Florence Ofori</li>
                       <li>Jemima Watkins</li>
                       <li>Yahaya Lukman</li>
-                      <li>Dorcas Antwi</li>
-                      <li>Doris Acheampong</li>
                       <li>Esther Darkwah</li>
                       <li>Eric Darkwah</li>
+                      <li>Dorcas Antwi</li>
+                      <li>Doris Acheampong</li>
                     </ul>
                   </div>
                 </div>
@@ -349,11 +350,11 @@
                   <div class="timeline-content">
                     <h4 class="timeline-title">Table 6</h4>
                     <ul>
+                      <li>Jeremy Caskey</li>
+                      <li>Adina Caskey</li>
                       <li>Rohith Gudipudi</li>
                       <li>Elaine Price</li>
                       <li>Erin Price</li>
-                      <li>Jeremy Caskey</li>
-                      <li>Adina Caskey</li>
                       <li>Micah Caskey</li>
                       <li>Julie Faieta</li>
                       <li>Daniel Gonzalez</li>
@@ -367,8 +368,8 @@
                       <li>Judith Anane</li>
                       <li>Chanel Moore</li>
                       <li>Kaaliyah King</li>
-                      <li>Victor Ewere</li>
                       <li>Verissa Owusu</li>
+                      <li>Victor Ewere</li>
                       <li>Francis Anim</li>
                       <li>Stephanie Watkins</li>
                       <li>Sophia Watkins</li>
