--- a/wedding/index.html
+++ b/wedding/index.html
@@ -201,48 +201,6 @@
       background: #e0e0e0;
       border-radius: 10px;
     }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    .modal-content {
-      margin: auto;
-      display: block;
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-    }
-
-    .modal-content:hover {
-      transform: scale(1.02);
-      transition: transform 0.3s ease;
-    }
-
-    .close {
-      position: absolute;
-      top: 20px;
-      right: 35px;
-      color: white;
-      font-size: 40px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: #bbb;
-      text-decoration: none;
-      cursor: pointer;
-    }
   </style>
 
 
@@ -301,15 +259,8 @@
           <h3 class="title-a">Seating</h3>
 
           <div class="about-img">
-            <img src="../assets/img/seating.jpg" class="img-fluid rounded b-shadow-a" alt="" id="seatingImage"
-              onclick="toggleModal()">
+            <img src="../assets/img/seating.jpg" class="img-fluid rounded b-shadow-a" alt="">
             <span class="about-img-info">Zoom in to see your table position</span>
-          </div>
-
-          <!-- Modal -->
-          <div id="imageModal" class="modal" onclick="toggleModal()">
-            <span class="close">&times;</span>
-            <img class="modal-content" id="modalImage">
           </div>
 
           <div class="line-mf"></div>
@@ -776,24 +727,7 @@
   <script src="https://kit.fontawesome.com/577eb74294.js" crossorigin="anonymous"></script>
 
   <script src="../assets/js/main.js"></script>
-  <script>
-    function toggleModal() {
-      const modal = document.getElementById("imageModal");
-      const modalImage = document.getElementById("modalImage");
-      const seatingImage = document.getElementById("seatingImage");
-
-      if (modal.style.display === "block") {
-        // If the modal is already open, close it
-        modal.style.display = "none";
-      } else {
-        // If the modal is closed, open it
-        modal.style.display = "block";
-        modalImage.src = seatingImage.src;
-      }
-    }
-  </script>
 
 </body>
 
 </html>
-````
