--- a/wedding/index.html
+++ b/wedding/index.html
@@ -324,12 +324,12 @@
                     <ul>
                       <li>Margaret Lawerteh</li>
                       <li>Florence Ofori</li>
-                      <li>Jemima Watkins</li>
-                      <li>Yahaya Lukman</li>
-                      <li>Esther Darkwah</li>
-                      <li>Eric Darkwah</li>
+                      <li>Stephanie Amoah</li>
+                      <li>Sophia Amoah</li>
                       <li>Dorcas Antwi</li>
                       <li>Doris Acheampong</li>
+                      <li>Esther Darkwah</li>
+                      <li>Eric Darkwah</li>
                     </ul>
                   </div>
                 </div>
@@ -371,8 +371,8 @@
                       <li>Verissa Owusu</li>
                       <li>Victor Ewere</li>
                       <li>Francis Anim</li>
-                      <li>Stephanie Watkins</li>
-                      <li>Sophia Watkins</li>
+                      <li>Jemima Watkins</li>
+                      <li>Yahaya Lukman</li>
                     </ul>
                   </div>
                 </div>
