--- a/wedding/index.html
+++ b/wedding/index.html
@@ -365,14 +365,14 @@
                   <div class="timeline-content">
                     <h4 class="timeline-title">Table 7</h4>
                     <ul>
+                      <li>Jemima Watkins</li>
+                      <li>Yahaya Lukman</li>
                       <li>Judith Anane</li>
                       <li>Chanel Moore</li>
                       <li>Kaaliyah King</li>
                       <li>Verissa Owusu</li>
                       <li>Victor Ewere</li>
                       <li>Francis Anim</li>
-                      <li>Jemima Watkins</li>
-                      <li>Yahaya Lukman</li>
                     </ul>
                   </div>
                 </div>
@@ -399,6 +399,7 @@
                       <li>Tonya Price</li>
                       <li>Amaya Price</li>
                       <li>Sydney Price</li>
+                      <li>Nakia Price</li>
                     </ul>
                   </div>
                 </div>
